Import of EXODIST/Declare-CLI-0.008 from CPAN.
gitpan-cpan-distribution: Declare-CLI
gitpan-cpan-version:      0.008
gitpan-cpan-path:         EXODIST/Declare-CLI-0.008.tar.gz
gitpan-cpan-author:       EXODIST
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -3,11 +3,13 @@ abstract: 'Declarative command line interface builder.'
 author:
   - 'Chad Granum <exodist7@gmail.com>'
 build_requires:
-  Fennec: 1.012
+  Fennec: 2.004
+  Fennec::Declare: 1.001
+  Parallel::Runner: 0
 configure_requires:
   Module::Build: 0.40
 dynamic_config: 1
-generated_by: 'Module::Build version 0.4003, CPAN::Meta::Converter version 2.120630'
+generated_by: 'Module::Build version 0.4003, CPAN::Meta::Converter version 2.120921'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -19,7 +21,7 @@ provides:
     version: 0.005
   Declare::CLI:
     file: lib/Declare/CLI.pm
-    version: 0.007
+    version: 0.008
   Declare::Opts:
     file: lib/Declare/Opts.pm
     version: 0.005
@@ -29,4 +31,4 @@ resources:
   bugtracker: http://github.com/exodist/Declare-CLI
   license: http://dev.perl.org/licenses/
   repository: http://github.com/exodist/Declare-CLI
-version: 0.007
+version: 0.008
